quorum/test/tests/TypeChecker/Pass/TypeInferenceText.quorum
a = "hello "
b = "world"
c = a + b
print c