quorum/test/tests/TypeChecker/Fail/TypeInferenceDifferentTypes.quorum
a = "hello "
b = 1.2
c = a + b
print c